@@ -29,7 +29,7 @@
  % Add STK subdirectories to the path
  stk_init__addpath (root);
  
-@@ -323,209 +308,6 @@
+@@ -323,211 +308,6 @@
  
  end % function
  
@@ -134,7 +134,9 @@
 -end
 -
 -gcc_version_warning = [];
--use_silent = ~ isempty (strfind (help ('mex'), '-silent'));  % Matlab-only
+-isoctave = (exist ('OCTAVE_VERSION', 'builtin') == 5);
+-use_silent = (~ isoctave) && ...  % Matlab-only:
+-    (~ isempty (strfind (help ('mex'), '-silent')));
 -
 -if compile
 -    
@@ -147,7 +149,7 @@
 -        
 -        include = sprintf ('-I%s', opts.include_dir);
 -        
--        if exist ('OCTAVE_VERSION', 'builtin') == 5
+-        if isoctave
 -            mex (src_files{:}, include);
 -        else
 -            warning_state = warning ('off', 'MATLAB:mex:GccVersion_link');
@@ -171,7 +173,7 @@
 -        fclose (fid);
 -        
 -        fprintf ('ok.\n');
--        if (exist ('OCTAVE_VERSION', 'builtin') == 5)
+-        if isoctave
 -            fflush (stdout);
 -        end
 -        cd (here);
